Update footer quote and copyright text

--- a/index.html
+++ b/index.html
@@ -769,8 +769,8 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p class="footer-quote">"Otomatisasi itu seni, manual itu derita. Kalau bisa BOT yang kerja, kenapa..."</p>
-            <p>&copy; 2025 Dimas Syauqi Syafa. Dibuat dengan fokus pada kesederhanaan dan elegance.</p>
+            <p class="footer-quote">"Otomatisasi itu seni, manual itu derita. Kalau bisa BOT yang kerja, kenapa harus saya?"</p>
+            <p>&copy; 2025 Dimas Syauqi Syafa.</p>
         </div>
     </footer>
 </body>
