--- a/index.html
+++ b/index.html
@@ -753,11 +753,11 @@
                         <div class="contact-icon">⬡</div>
                         <span>GitHub</span>
                     </a>
-                    <a href="https://linkedin.com/in/dimas-syauqi-syafa" class="contact-link" target="_blank">
+                    <a href="https://linkedin.com/in/syauqqii" class="contact-link" target="_blank">
                         <div class="contact-icon">◈</div>
                         <span>LinkedIn</span>
                     </a>
-                    <a href="mailto:syauqqii@outlook.com" class="contact-link">
+                    <a href="mailto:dimas.syauqi007@gmail.com" class="contact-link">
                         <div class="contact-icon">✉</div>
                         <span>Email</span>
                     </a>
